--- a/hplovecraft/erich_zann_muzsikaja.html
+++ b/hplovecraft/erich_zann_muzsikaja.html
@@ -27,7 +27,7 @@
             </a>
     </div>
     <div>
-        <img src="erich_zann_muzsikaja.jpeg" alt="Könyv borító: Erich Zann muzsikája" width="300px" style="display: inline-block;">
+        <img src="kepek/erich_zann_muzsikaja.jpeg" alt="Könyv borító: Erich Zann muzsikája" width="300px" style="display: inline-block;">
         <div style="display: inline-block; text-align: right; width: 50%; float: right;">
             <p style="font-weight: bold; font-size: 20px;">Értékelés:</p>
             <span class="fa fa-star checked"></span>
@@ -46,7 +46,7 @@
         </p>
         </div>
         <div style="width: 40%; float: right; display: inline-block;">
-            <img src="ErichZann2.jpg" alt="Erich Zann portréja" style="width: 95%;">
+            <img src="kepek/ErichZann2.jpg" alt="Erich Zann portréja" style="width: 95%;">
         </div>
     </div>
 </main>
