--- a/hplovecraft/lovecraft_konyv.html
+++ b/hplovecraft/lovecraft_konyv.html
@@ -28,6 +28,9 @@
     <div>
         <a href="erich_zann_muzsikaja.html">Erich Zann muzsikája</a>
     </div>
+    <div>
+        <a href="pickman_modellje.html">Pickman modellje</a>
+    </div>
 </main>
 </body>
 </html>
